# constraint-il-transfer

./: .gitignore  AGENTS.md  pyproject.toml
.opencode/agents/: code-explorer.md  paper-reader.md
configs/forward_model/: osc_eef_forward_image_v15.json
docs/: RESEARCH_LOG.md  action_chunk_ranking_report.md  eef_pose_osc_policy_training.md  forward_model_guidance_next_steps.md
docs/guided_denoising/: formulation.md  implementation_plan.md
docs/route_b_validation/: AGENTS.md  README.md  adapter_report.md  compare_all.py  create_abs_eef_mink_dataset.py  fit_delta_eef_to_osc_adapter.py  playback_eef_pose.py  plot_delta_eef_to_osc_adapter_replay.py  plot_results.py  render_panda_mink_failure_videos.py  replay_delta_eef_to_osc_adapter.py  replay_norm_delta_eef.py  report.md  results.json  train_delta_eef_to_osc_mlp_adapter.py  verify_ik_controller.py  verify_panda_mink_controller.py  verify_position_controller.py
metadata/: environment_record.txt
outputs/control_timing/: SUMMARY.md
outputs/eef_pose_osc_policy/: README.md  (+1 more)
papers/: README.md
scripts/: AGENTS.md  add_delta_eef_label.py  benchmark_pointcloud.py  calibrate_action_scale.py  check_osc_forward_model_grad.py  diagnose_collisions.py  diagnose_control_timing.py  diagnose_forward_model_random_rollout.py  diagnose_guidance_gradient.py  diagnose_guidance_update_effect.py  osc_forward_model.py  replay_delta_eef_to_video.py  run_baseline_eval_matrix.py  run_baseline_eval_matrix_no_mask.py  run_pc1_eval_matrix.py  run_pc1_eval_matrix_no_mask.py  train_osc_eef_forward_model.py  validate_delta_eef_dataset.py
(+188 files in other folders)
